Add padding and margin to buttons
Make the buttons larger, suitable for a touch screen

--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@ text-align:center;
 p {
 color: white;
 }
-
+        
+button {
+    padding: 5px;
+    margin: 3px;
+}
+        
 canvas { background: #99cc00; 
 display: block; margin: 0 auto;
 margin-top:10px;
